fix order of stretch args to match padding/margin

--- a/frameworks/compass/stylesheets/compass/layout/_stretching.scss
+++ b/frameworks/compass/stylesheets/compass/layout/_stretching.scss
@@ -9,24 +9,16 @@
 // stretch element width to specified left and right position
 
 @mixin stretch-x($offset-left:0, $offset-right:0) {
-  @include stretch(false, $offset-left, false, $offset-right);
+  @include stretch(false, $offset-right, false, $offset-left);
 }
 
 
 // shorthand to stretch element height and width
 
-@mixin stretch($offset-top:0, $offset-left:0, $offset-bottom:0, $offset-right:0) {
+@mixin stretch($offset-top:0, $offset-right:0, $offset-bottom:0, $offset-left:0) {
   position: absolute;
-  @if $offset-top {
-    top: $offset-top;
-  }
-  @if $offset-bottom {
-    bottom: $offset-bottom;
-  }
-  @if $offset-left {
-    left: $offset-left;
-  }
-  @if $offset-right {
-    right: $offset-right;
-  }  
+  @if $offset-top { top: $offset-top; }
+  @if $offset-bottom { bottom: $offset-bottom; }
+  @if $offset-left { left: $offset-left; }
+  @if $offset-right { right: $offset-right; }
 }
